Added styling to coming soon page.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <title>Coming Soon!</title>
 </head>
 <body>
-    <div class='body'>
-        <div class='Content'>
-            <div class='ComingSoon'>
-                <h1 class='ComingSoonNml'>Coming Soon.</h1>
-                <h1 class='ComingSoonOtl'>Coming Soon.</h1>
-                <h1 class='ComingSoonNml'>Coming Soon.</h1>
-            </div>
+    <div class="content">
+        <div class="inner-box">
+            <h1 class="title ComingSoonNml">COMING SOON</h1>
+            <h1 class="title ComingSoonOtl">COMING SOON</h1>
+            <h1 class="title ComingSoonNml">COMING SOON</h1>
         </div>
     </div>
 </body>
